Fix Grid 7 Got the lower boxes in line but now the areas for all of the boxes in the upper items wrapper have expanded and pushed some of the boxes off screen

--- a/Crystalspire-project/Crystalspire.css
+++ b/Crystalspire-project/Crystalspire.css
@@ -87,7 +87,8 @@ body {
 .Portfolio-items-wrapper {
   display: grid;
   grid-auto-flow: row;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: repeat(3, 440px);
+
 }
 .Portfolio-item-wrapper {
   position: relative;
